--- a/.github/workflows/actionPractice.yml
+++ b/.github/workflows/actionPractice.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Start workflow message
-        run: echo Hello, world!
+      - name: Output a message
+        run: echo "Action Complete!"
 
       # Runs a set of commands using the runners shell
       - name: Ending workflow message
